# castutils-python

./: README.md  pyproject.toml  setup.cfg
src/castutils/: __init__.py  builtins.py  exceptions.py  types.py
src/castutils/builtins/: booleans.py  floats.py  integers.py  strings.py
src/transformer/: builtins.py
tests/: test_builtins_str.py
