[tool.poetry]
name = "transformer"
version = "0.0.0"
description = "Variable transformation and casting utilities (Python)"
authors = ["Shane Spencer <305301+whardier@users.noreply.github.com>"]
license = "MIT"

[tool.poetry-dynamic-versioning]
enable = true
vcs = "git"
style = "semver"

[tool.poetry-dynamic-versioning.substitution]
files = ["src/_transformer_version.py"]
patterns = ["(^version\\s*=\\s*['\"])[^'\"]*(['\"])"]

[tool.poetry.dependencies]
python = "^3.7"

[tool.poetry.dev-dependencies]
black = "^21.12b0"
flake8 = "^4.0.1"
isort = "^5.10.1"
pre-commit = "^2.16.0"
mypy = "^0.930"
autoflake = "^1.4"
pytest = "^6.2.5"
hypothesis = "^6.34.1"

[build-system]
requires = ["poetry-core>=1.0.0", "poetry-dynamic-versioning"]
build-backend = "poetry.core.masonry.api"
